--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StringAlter",
+  "name": "string-alter",
   "version": "0.4.0",
   "description": "String alter",
   "main": "dist/StringAlter.js",
